# budgetmobileapp

./: .gitignore  README.md  advices.txt  ai_utilities.py  auth_manager.py  backend_server.py  claude_api.py  expense_tracker.py  firebase_utils.py  friends_manager.py  main.py  notification_manager.py  pyproject.toml  requirements.txt  settings_manager.py  theme.py  to_do  with_flet2.py
.github/workflows/: build-android.yml
src/: main.py  tab_navigation.py
src/assets/: main_v0.py
