[project]
name = "expensetracker"
version = "0.1.0"
description = "Personal expense tracking app with AI assistance"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Sorina Popa", email = "ssmihaelapopa@gmail.com" }
]
dependencies = [
  "flet==0.28.3"
]

# Build configuration
module = "main"
icon = "assets/fancyzebra.png"  # Add an app icon if you have one

# Android specific settings
[tool.flet.android]
package = "fancyzebra.app"  # Change to your desired package name
permissions = [
    "android.permission.INTERNET",
    "android.permission.ACCESS_NETWORK_STATE",
    "android.permission.WRITE_EXTERNAL_STORAGE",
    "android.permission.READ_EXTERNAL_STORAGE"
]

# Include assets
[tool.flet.assets]
src = "assets"
dest = "assets"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}